<resources>
    <string name="app_name">EarthQuakes</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="earthquakes_url">http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.geojson</string>
    <string name="title_activity_detail">Detail</string>
    <string name="downloadedEarthquakes">%d downloaded earthquakes.</string>
    <string name="title_activity_settings">Preferencias</string>
    <string name="earthquakes_refresh">Earthquakes refresh</string>
    <string name="earthquakes_filter">Earthquakes filter</string>

    <string name="PREF_AUTO_UPDATE">pref-update</string>
    <string name="PREF_UPDATE_INTERVAL">pref-interval</string>
    <string name="PREF_MIN_MAGNITUDE">pref-magnitude</string>
    <string name="auto_update_prompt">Auto update</string>
    <string name="auto_update_desc">Update earthquakes automatically or not</string>
    <string name="auto_update_interval_prompt">Update Frequency</string>
    <string name="auto_update_interval_desc">Frequency at which to refresh earthquake list</string>
    <string name="min_magnitude_prompt">Minimim Quake Magnitude</string>
    <string name="min_magnitude_desc">Select the minimum magnitude earthquake </string>

</resources>
