<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/earthquakes_refresh">
        <!-- Autorefresh si/no-->
        <SwitchPreference
            android:key="@string/PREF_AUTO_UPDATE"
            android:title="@string/auto_update_prompt"
            android:summary="@string/auto_update_desc"
            android:defaultValue="true">
        </SwitchPreference>

        <!-- Frecuencia refresco (si el autorefresh es si)-->
        <ListPreference
            android:defaultValue="2"
            android:key="@string/PREF_UPDATE_INTERVAL"
            android:title="@string/auto_update_interval_prompt"
            android:summary="@string/auto_update_interval_desc"
            android:entries="@array/intervaloptions"
            android:entryValues="@array/intervalvalues"
            android:dependency="@string/PREF_AUTO_UPDATE">
        </ListPreference>

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/earthquakes_filter">
        <!-- Magnitud minima -->
        <ListPreference
            android:defaultValue="1"
            android:key="@string/PREF_MIN_MAGNITUDE"
            android:title="@string/min_magnitude_prompt"
            android:summary="@string/min_magnitude_desc"
            android:entries="@array/magnitudeoptions"
            android:entryValues="@array/magnitudevalues">
        </ListPreference>

    </PreferenceCategory>
</PreferenceScreen>